force-app/main/default/objects/BSC_Risk_Assessment_Section__c/BSC_Risk_Assessment_Section__c.object-meta.xml
<CustomObject>
    <label>Risk Assessment Section</label>
    <nameField>
        <label>Risk Assessment Section</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Assessment Section</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>