force-app/main/default/objects/BSC_Risk_Assessment_Section__c/fields/DisplayText__c.field-meta.xml
<CustomField>
    <fullName>DisplayText__c</fullName>
    <label>DisplayText</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>