force-app/main/default/objects/BSC_Risk_Assessment_Section__c/fields/Risk_Assessment_Definition__c.field-meta.xml
<CustomField>
    <fullName>Risk_Assessment_Definition__c</fullName>
    <label>Risk Assessment  Definition</label>
    <referenceTo>BSC_Risk_Assessment_Definition__c</referenceTo>
    <relationshipLabel>Risk Assessment Section</relationshipLabel>
    <relationshipName>Risk_Assessment_Section</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>