force-app/main/default/objects/BSC_Risk_Assessment_Section__c/fields/Total_Questions__c.field-meta.xml
<CustomField>
    <fullName>Total_Questions__c</fullName>
    <label>Total Questions</label>
    <summaryForeignKey>BSC_Question__c.Risk_Assessment_Section__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>